/*
 * Copyright 2019 Andrey Tolpeev
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package teamcityapp.features.manage_accounts.view

import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.intent.Intents
import androidx.test.espresso.intent.matcher.IntentMatchers.hasComponent
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry
import com.github.vase4kin.teamcityapp.R
import com.github.vase4kin.teamcityapp.TeamCityApplicationBase
import com.github.vase4kin.teamcityapp.account.create.view.CreateAccountActivity
import com.github.vase4kin.teamcityapp.api.TeamCityService
import com.github.vase4kin.teamcityapp.dagger.modules.AppModule
import com.github.vase4kin.teamcityapp.dagger.modules.FakeTeamCityServiceImpl
import com.github.vase4kin.teamcityapp.dagger.modules.Mocks
import com.github.vase4kin.teamcityapp.helper.CustomIntentsTestRule
import com.github.vase4kin.teamcityapp.helper.RecyclerViewMatcher
import com.github.vase4kin.teamcityapp.helper.TestUtils
import com.github.vase4kin.teamcityapp.login.view.LoginActivity
import com.github.vase4kin.teamcityapp.storage.SharedUserStorage
import com.github.vase4kin.teamcityapp.storage.UsersFactory
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import com.github.vase4kin.teamcityapp.helper.HiltApiTestRule
import dagger.hilt.android.testing.BindValue
import dagger.hilt.android.testing.UninstallModules
import teamcityapp.features.manage_accounts.dagger.ManageAccountsActivityTestAppModule
import dagger.Module
import dagger.hilt.InstallIn
import dagger.hilt.components.SingletonComponent
import org.junit.Before
import org.junit.BeforeClass
import org.junit.Ignore
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.mockito.Mock
import org.mockito.Spy
import teamcityapp.libraries.cache_manager.CacheManager

@UninstallModules(AppModule::class)
@HiltAndroidTest
@RunWith(AndroidJUnit4::class)
class ManageAccountsActivityTest {

    @JvmField
    @Rule(order = 0)
    val hiltRule = HiltAndroidRule(this)

    @JvmField
    @Rule(order = 1)
    val mockitoRule = org.mockito.junit.MockitoJUnit.rule().strictness(org.mockito.quality.Strictness.LENIENT)

    @JvmField
    @Rule(order = 2)
    val apiRule = HiltApiTestRule(hiltRule) { teamCityService }

    @Rule(order = 3)
    @JvmField
    val activityRule = CustomIntentsTestRule(ManageAccountsActivity::class.java)

    @Spy
    val teamCityService: TeamCityService = FakeTeamCityServiceImpl()

    @BindValue
    @Mock
    lateinit var cacheManager: CacheManager

    private val storage: SharedUserStorage
        get() {
            val app =
                InstrumentationRegistry.getInstrumentation().targetContext.applicationContext as TeamCityApplicationBase
            return app.appInjector.sharedUserStorage()
        }

    companion object {
        @BeforeClass
        fun disableOnboarding() {
            TestUtils.disableOnboarding()
        }
    }

    @Before
    fun setUp() {
        val storage = storage
        storage.clearAll()
        storage.saveGuestUserAccountAndSetItAsActive(Mocks.URL, false)
    }

    @Test
    fun testUserCanSeeUserAccount() {
        // Launch activity
        activityRule.launchActivity(null)

        // List has item with header
        onView(withId(R.id.my_recycler_view))
            .check(TestUtils.hasItemsCount(1))
        // Checking the user name
        onView(
            RecyclerViewMatcher.withRecyclerView(R.id.my_recycler_view).atPositionOnView(
                0,
                R.id.title
            )
        )
            .check(matches(withText(UsersFactory.GUEST_USER_USER_NAME)))
        // Checking the user teamcity server url
        onView(
            RecyclerViewMatcher.withRecyclerView(R.id.my_recycler_view).atPositionOnView(
                0,
                R.id.subTitle
            )
        )
            .check(matches(withText(Mocks.URL)))
    }

    @Test
    fun testUserRemovesSingleAccountAndNavigatesToLoginScreen() {
        // Launch activity
        activityRule.launchActivity(null)

        // check accounts size
        onView(withId(R.id.my_recycler_view))
            .check(TestUtils.hasItemsCount(1))
        // Click on account
        onView(
            RecyclerViewMatcher.withRecyclerView(R.id.my_recycler_view).atPosition(
                0
            )
        ).perform(click())
        // Click on OK
        onView(withText(R.string.dialog_remove_active_account_positive_button_text)).perform(click())

        // Check login activity is opened
        Intents.intended(
            hasComponent(
                LoginActivity::class.java.name
            )
        )
    }

    @Test
    fun testUserCanOpenCreateNewAccount() {
        // Launch activity
        activityRule.launchActivity(null)

        onView(withId(R.id.floating_action_button)).perform(click())

        // Check login activity is opened
        Intents.intended(
            hasComponent(
                CreateAccountActivity::class.java.name
            )
        )
    }

    /**
     * Two accounts, active and not active, remove not active check it disappear
     */
    @Ignore("ADD TEST")
    @Test
    fun testUserCanRemoveNotActiveAccount() {
    }

    /**
     * Two accounts, active and not active, remove active check it the user being navigated to home screen
     */
    @Ignore("ADD TEST")
    @Test
    fun testUserCanRemoveActiveAccount() {
    }

    @Test
    fun testUserCanSeeSslWarning() {
        // Prepare
        storage.clearAll()
        storage.saveGuestUserAccountAndSetItAsActive(Mocks.URL, true)
        // Launch activity
        activityRule.launchActivity(null)

        // List has item with header
        onView(withId(R.id.my_recycler_view))
            .check(TestUtils.hasItemsCount(1))
        // Checking the user name
        onView(
            RecyclerViewMatcher.withRecyclerView(R.id.my_recycler_view).atPositionOnView(
                0,
                R.id.title
            )
        )
            .check(matches(withText(UsersFactory.GUEST_USER_USER_NAME)))
        // Checking the user teamcity server url
        onView(
            RecyclerViewMatcher.withRecyclerView(R.id.my_recycler_view).atPositionOnView(
                0,
                R.id.subTitle
            )
        )
            .check(matches(withText(Mocks.URL)))
        // Checking the user has ssl warning text and click on it
        onView(
            RecyclerViewMatcher.withRecyclerView(R.id.my_recycler_view).atPositionOnView(
                0,
                R.id.sslDisabled
            )
        )
            .check(matches(withText(R.string.text_account_un_secure_ssl_)))
            .perform(click())

        onView(withText(R.string.warning_ssl_dialog_title)).check(matches(isDisplayed()))
        onView(withText(R.string.warning_ssl_dialog_content)).check(matches(isDisplayed()))
        onView(withText(R.string.dialog_ok_title)).perform(click())
    }

    @Module(includes = [ManageAccountsActivityTestAppModule::class])
    @InstallIn(SingletonComponent::class)
    object TestBindings
}
